system doing 10% worse then bentity even using the weights learned from it

--- a/queries exp include indicator features3.ipynb
+++ b/queries exp include indicator features3.ipynb
@@ -494,8 +494,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5min 59s, sys: 14.3 s, total: 6min 13s\n",
-      "Wall time: 6min 22s\n"
+      "CPU times: user 5min 56s, sys: 14.2 s, total: 6min 10s\n",
+      "Wall time: 6min 19s\n"
      ]
     }
    ],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -655,7 +655,7 @@
     "        \n",
     "        self.num_words_to_use_conv = 5\n",
     "        self.enable_boosting = False\n",
-    "        self.num_negative_target_samples = 1\n",
+    "        self.num_negative_target_samples = 0 #1\n",
     "        #self.enable_match_surface = False\n",
     "        #self.enable_link_counts = True\n",
     "        self.enable_train_wordvecs = False\n",
@@ -1077,9 +1077,11 @@
     "            input_var=self.x_query_featurs,\n",
     "        )\n",
     "    \n",
+    "        rank_feats = [f[0] for f in enumerate(featuresNames) if f[1].startswith('Rank=')]\n",
+    "    \n",
     "        self.denotation_join_feat_l = lasagne.layers.InputLayer(\n",
     "            (None,self.num_indicator_features),\n",
-    "            input_var=self.x_denotaiton_features,\n",
+    "            input_var=self.x_denotaiton_features,#[:, rank_feats],\n",
     "        )\n",
     "        \n",
     "        self.query_layer_l = lasagne.layers.DenseLayer(\n",
@@ -1097,7 +1099,7 @@
     "        \n",
     "        self.all_params = []\n",
     "        \n",
-    "        self.all_params += lasagne.layers.get_all_params(self.query_layer_l)\n",
+    "#         self.all_params += lasagne.layers.get_all_params(self.query_layer_l)\n",
     "        \n",
     "        self.aligned_queries = self.query_output[self.x_query_link_id]\n",
     "        \n",
@@ -1108,6 +1110,7 @@
     "            name='denotation_lin',\n",
     "            num_units=1,\n",
     "            nonlinearity=lasagne.nonlinearities.linear,\n",
+    "            W=self.query_layer_l.W,\n",
     "        )\n",
     "        \n",
     "        self.denotation_layer_l.b.get_value(borrow=True)[:] += 1\n",
@@ -1121,7 +1124,11 @@
     "        ## multiply the two parts of the join scores\n",
     "        \n",
     "        #  self.aligned_cosine\n",
-    "        self.unmerged_scores =  (self.aligned_queries) * (self.denotation_output) * (1 - self.x_denotaiton_features[:, self.impossible_query])\n",
+    "        self.unmerged_scores =  (\n",
+    "            ( #(self.aligned_queries) + \n",
+    "            (self.denotation_output))# * \n",
+    "#             (1 - self.x_denotaiton_features[:, self.impossible_query])\n",
+    "        )\n",
     "        \n",
     "        # this should be the fastest way to compute this\n",
     "        # however it is creating matrices too large and isn't able to allocate enough memory or something\n",
@@ -1256,12 +1263,19 @@
     "            sequences=select_seq,\n",
     "        )\n",
     "\n",
-    "#         self.groupped_elems = T.dot(self.selecting_matrix[-1], \n",
-    "#                                     T.diag(T.exp(self.true_output)))\n",
-    "#         self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
-    "        self.groupped_elems = T.dot(self.selecting_matrix[-1].T, \n",
-    "                                   T.exp(self.true_output))\n",
-    "        self.groupped_res = T.log(self.groupped_elems)\n",
+    "\n",
+    "#         self.groupped_elems = T.dot(self.selecting_matrix[-1].T, \n",
+    "#                                    T.exp(self.true_output))\n",
+    "#         self.groupped_res = T.log(self.groupped_elems)\n",
+    "            \n",
+    "        def lossSum(indx, res):\n",
+    "            return sloppyMathLogSum(res[T.arange(indx[0], indx[1])])\n",
+    "        \n",
+    "        self.groupped_res, _ = theano.scan(\n",
+    "            lossSum,\n",
+    "            sequences=[self.y_grouping],\n",
+    "            non_sequences=[self.true_output],\n",
+    "        )\n",
     "        \n",
     "        self.loss_vec = self.groupped_res - self.true_output[self.y_grouping[:,2]]\n",
     "        \n",
@@ -1409,7 +1423,7 @@
     "                queries_feats_indicators = []\n",
     "                for ind in targets['query_vals']:\n",
     "                    query_feats = np.zeros((self.num_indicator_features,), dtype='int8')\n",
-    "                    query_feats[ind] = 1\n",
+    "#                     query_feats[ind] = 1\n",
     "                    queries_feats_indicators.append(query_feats)\n",
     "                queries_len = len(targets['query_vals'])\n",
     "                \n",
@@ -1445,6 +1459,7 @@
     "                        for indx in xrange(len(indicators_place[1])):\n",
     "                            local_feats = np.zeros((self.num_indicator_features,), dtype='int8')\n",
     "                            local_feats[indicators_place[1][indx]] = 1\n",
+    "                            local_feats[targets['query_vals'][indx]] = 1\n",
     "                            joint_indicators.append(local_feats)\n",
     "                            query_idx.append(len(self.current_queries) + indx)\n",
     "                    else:\n",
@@ -1510,6 +1525,7 @@
     "                #self.current_target_goal.append(isGold)\n",
     "                self.learning_targets += target_learings\n",
     "            if len(self.current_target_id) > self.batch_size:\n",
+    "#                 return\n",
     "                self.run_batch(func)\n",
     "                if self.total_links > self.num_training_items:\n",
     "                    return self.total_loss / self.total_links, self.total_boosted_loss / self.total_links\n",
@@ -1563,23 +1579,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "queries_exp.compute_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "317"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(queries_exp.current_denotations_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3133"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(queries_exp.current_denotations_related_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 5min 20s, sys: 3.03 s, total: 5min 23s\n",
-      "Wall time: 42.4 s\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(0.13138054428721602, 0.13138054428721602)"
+       "(9972, 1)"
       ]
      },
      "execution_count": 59,
@@ -1588,13 +1651,26 @@
     }
    ],
    "source": [
-    "queries_exp.num_training_items = 5000\n",
-    "%time queries_exp.compute_batch()"
+    "queries_exp.query_layer_l.W.get_value(borrow=True).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "loaded_weights = np.loadtxt('/home/matthew/data/external-wiki-weights-wplinks6.txt')\n",
+    "\n",
+    "queries_exp.query_layer_l.W.get_value(borrow=True)[:] = 0\n",
+    "queries_exp.query_layer_l.W.get_value(borrow=True)[0:loaded_weights.shape[0],0] = loaded_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -1602,10 +1678,32 @@
     {
      "data": {
       "text/plain": [
-       "[query_lin.W, query_lin.b, denotation_lin.W, denotation_lin.b]"
+       "-2.1156089"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.query_layer_l.W.get_value(borrow=True).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[query_lin.W, query_lin.b, query_lin.W, denotation_lin.b]"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1714,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.impossible_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -1646,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1683,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -1736,7 +1856,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "def evalCurrentStateFahrni(trainingData=True, numSamples=50000):\n",
+    "    def renderF1(corr, precDenom, recDenom):\n",
+    "        prec = float(corr) / precDenom\n",
+    "        rec = float(corr) / recDenom\n",
+    "        return 'Prec = {}/{} = {}, Rec = {}/{} = {}, F1 = {}'.format(\n",
+    "            corr, precDenom, prec,\n",
+    "            corr, recDenom, rec,\n",
+    "            2 * prec * rec / (prec + rec)\n",
+    "        )\n",
+    "    \n",
+    "    counter = defaultdict(lambda: 0)\n",
+    "    for qu in queries.values():\n",
+    "        if qu.values()[0]['training'] != trainingData:\n",
+    "            continue\n",
+    "        for en in qu.values():\n",
+    "            if en['gold']:\n",
+    "                gold = en['gold']\n",
+    "                svals = sorted(en['vals'].values())\n",
+    "                picked = None\n",
+    "                for k,v in en['vals'].iteritems():\n",
+    "                    if v == svals[-1]:\n",
+    "                        picked = k\n",
+    "                label = None\n",
+    "                if gold == 'nil':  # TODO: check that this is the nil value\n",
+    "                    if picked == 'nil':\n",
+    "                        label = 'cNIL'\n",
+    "                    else:\n",
+    "                        label = 'wNIL_KB'\n",
+    "                elif picked == gold:\n",
+    "                    label = 'cKB'\n",
+    "                elif picked == 'nil':\n",
+    "                    label = 'wKB_NIL'\n",
+    "                else:\n",
+    "                    label = 'wKB_KB'\n",
+    "                counter[label] += 1\n",
+    "                \n",
+    "    print 'KB:', renderF1(counter['cKB'], counter['cKB'] + counter['wKB_KB'] + counter['wNIL_KB'], counter['cKB'] + counter['wKB_KB'] + counter['wKB_NIL'])\n",
+    "    if counter['cNIL']:\n",
+    "        print 'NIL:', renderF1(counter['cNIL'], counter['cNIL'] + counter['wKB_NIL'], counter['cNIL'] + counter['wNIL_KB'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1747,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1772,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1797,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1808,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -2396,7 +2566,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "436"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([f for f in featuresNames if f.startswith('Rank=')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -2405,35 +2597,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, (0.098240256012919566, 0.098240256012919566))\n",
-      "(4480, 0.6888392857142858)\n",
-      "(485, 0.7030927835051546)\n",
-      "(1, (0.072313764524768287, 0.072313764524768287))\n",
-      "(4480, 0.7457589285714286)\n",
-      "(485, 0.7010309278350515)\n",
-      "(2, (0.067792584101622685, 0.067792584101622685))\n",
-      "(4480, 0.7540178571428572)\n",
-      "(485, 0.7030927835051546)\n",
-      "(3, (0.063861165335965725, 0.063861165335965725))\n",
-      "(4480, 0.75625)\n",
-      "(485, 0.7051546391752578)\n",
-      "(4, (0.061092444178199548, 0.061092444178199548))\n",
-      "(4480, 0.7587053571428571)\n",
-      "(485, 0.709278350515464)\n",
-      "(5, (0.062181324987669331, 0.062181324987669331))\n",
-      "(4480, 0.7618303571428572)\n",
-      "(485, 0.711340206185567)\n",
-      "(6, (0.060857606064642536, 0.060857606064642536))\n",
-      "(4480, 0.7658482142857143)\n",
-      "(485, 0.711340206185567)\n",
-      "(7, (0.060902800372058551, 0.060902800372058551))\n",
-      "(4480, 0.7678571428571429)\n",
+      "KB: Prec = 321/485 = 0.661855670103, Rec = 321/485 = 0.661855670103, F1 = 0.661855670103\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run the evaluation on the testing data\n",
+    "queries_exp.num_training_items = 60000\n",
+    "queries_exp.compute_batch(False)\n",
+    "evalCurrentStateFahrni(False, queries_exp.num_training_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, (0.094223322674787377, 0.094223322674787377))\n",
+      "(4480, 0.7029017857142857)\n",
+      "(485, 0.6721649484536083)\n",
+      "(1, (0.087092421438036152, 0.087092421438036152))\n",
+      "(4480, 0.7216517857142857)\n",
+      "(485, 0.6804123711340206)\n",
+      "(2, (0.083494613148390559, 0.083494613148390559))\n",
+      "(4480, 0.7308035714285714)\n",
+      "(485, 0.6989690721649484)\n",
+      "(3, (0.081245810845190738, 0.081245810845190738))\n",
+      "(4480, 0.7375)\n",
       "(485, 0.7072164948453609)\n",
-      "(8, (0.060184676974776405, 0.060184676974776405))\n",
-      "(4480, 0.7698660714285714)\n",
+      "(4, (0.07964740128202398, 0.07964740128202398))\n",
+      "(4480, 0.7415178571428571)\n",
       "(485, 0.7072164948453609)\n",
-      "(9, (0.058572513781528723, 0.058572513781528723))\n",
-      "(4480, 0.7700892857142857)\n",
+      "(5, (0.078424958287743207, 0.078424958287743207))\n",
+      "(4480, 0.7441964285714285)\n",
+      "(485, 0.711340206185567)\n",
+      "(6, (0.077443495139406071, 0.077443495139406071))\n",
+      "(4480, 0.7455357142857143)\n",
+      "(485, 0.711340206185567)\n",
+      "(7, (0.076626470067597416, 0.076626470067597416))\n",
+      "(4480, 0.7470982142857143)\n",
+      "(485, 0.711340206185567)\n",
+      "(8, (0.075926910241880849, 0.075926910241880849))\n",
+      "(4480, 0.746875)\n",
+      "(485, 0.711340206185567)\n",
+      "(9, (0.075317671659071675, 0.075317671659071675))\n",
+      "(4480, 0.7482142857142857)\n",
       "(485, 0.711340206185567)\n"
      ]
     }
@@ -2441,7 +2655,7 @@
    "source": [
     "exp_results = []\n",
     "\n",
-    "true_num_samples = 500000 #queries_exp.num_training_items\n",
+    "true_num_samples = 5000000 #queries_exp.num_training_items\n",
     "\n",
     "for i in xrange(10):\n",
     "    queries_exp.num_training_items = true_num_samples\n",
@@ -2450,14 +2664,14 @@
     "    exp_results.append(res)\n",
     "    #if i % 2 == 1:\n",
     "    exp_results.append(('training state', evalCurrentState(True, queries_exp.num_training_items)))\n",
-    "    queries_exp.num_training_items = 50000  # don't need that many samples to see how well it performs\n",
+    "    queries_exp.num_training_items = 60000  # don't need that many samples to see how well it performs\n",
     "    exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "    exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -2466,23 +2680,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(485, 'Prec = 288.0/396 = 0.727272727273, Rec = 288.0/394 = 0.730964467005, F1 = 0.729113924051')\n"
+      "(485, 'Prec = 268.0/398 = 0.673366834171, Rec = 268.0/394 = 0.680203045685, F1 = 0.676767676768')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(485,\n",
-       " 'Prec = 288.0/396 = 0.727272727273, Rec = 288.0/394 = 0.730964467005, F1 = 0.729113924051')"
+       " 'Prec = 268.0/398 = 0.673366834171, Rec = 268.0/394 = 0.680203045685, F1 = 0.676767676768')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evalCurrentStateF1(False,50000)"
+    "evalCurrentStateF1(False,60000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KB: Prec = 318/485 = 0.655670103093, Rec = 318/485 = 0.655670103093, F1 = 0.655670103093\n"
+     ]
+    }
+   ],
+   "source": [
+    "evalCurrentStateFahrni(False,50000)"
    ]
   },
   {
@@ -2820,7 +3053,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2847,7 +3080,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
