--- a/queries exp include indicator features3.ipynb
+++ b/queries exp include indicator features3.ipynb
@@ -494,8 +494,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5min 56s, sys: 14.2 s, total: 6min 10s\n",
-      "Wall time: 6min 19s\n"
+      "CPU times: user 6min 6s, sys: 14.3 s, total: 6min 21s\n",
+      "Wall time: 6min 29s\n"
      ]
     }
    ],
@@ -636,11 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
+      "  from scan_perform.scan_perform import *\n"
+     ]
+    }
+   ],
    "source": [
     "class EntityVectorLinkExp(basePreProcessedQueries):\n",
     "\n",
@@ -1065,7 +1074,7 @@
     "            nonlinearity=lasagne.nonlinearities.linear,\n",
     "        )\n",
     "        \n",
-    "        self.cosine_weighted.W.get_value(borrow=True)[:] += 1\n",
+    "#         self.cosine_weighted.W.get_value(borrow=True)[:] += 1\n",
     "        \n",
     "        self.cosine_output = lasagne.layers.get_output(\n",
     "            lasagne.layers.reshape(self.cosine_weighted, (-1,)))\n",
@@ -1091,7 +1100,7 @@
     "            nonlinearity=lasagne.nonlinearities.linear,\n",
     "        )\n",
     "        \n",
-    "        self.query_layer_l.b.get_value(borrow=True)[:] += 1\n",
+    "#         self.query_layer_l.b.get_value(borrow=True)[:] += 1\n",
     "        \n",
     "        self.query_output = lasagne.layers.get_output(\n",
     "            lasagne.layers.reshape(self.query_layer_l, (-1,))\n",
@@ -1113,7 +1122,7 @@
     "            W=self.query_layer_l.W,\n",
     "        )\n",
     "        \n",
-    "        self.denotation_layer_l.b.get_value(borrow=True)[:] += 1\n",
+    "#         self.denotation_layer_l.b.get_value(borrow=True)[:] += 1\n",
     "        \n",
     "        self.denotation_output = lasagne.layers.get_output(\n",
     "            lasagne.layers.reshape(self.denotation_layer_l, (-1,)))\n",
@@ -1228,7 +1237,7 @@
     "        \n",
     "        \n",
     "        # rescale the scores to prevent softmax from blowing up\n",
-    "        self.true_output = 10 * self.unscaled_output / theano.gradient.disconnected_grad(abs(self.unscaled_output).max())#self.cosine_output # self.merged_rescaled #self.linear_output_rescaled\n",
+    "        self.true_output = self.merged_scores #10 * self.unscaled_output / theano.gradient.disconnected_grad(abs(self.unscaled_output).max())#self.cosine_output # self.merged_rescaled #self.linear_output_rescaled\n",
     "        \n",
     "        \n",
     "        \n",
@@ -1246,24 +1255,27 @@
     "#         # build a tensor to make a matrix with one set on each dimention\n",
     "#         self.grouped, grouped_update = theano.scan(maxOverRange, sequences=self.y_grouping)\n",
     "\n",
-    "        def setSubSelector(indx, outputs):\n",
-    "            return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
+    "###########\n",
+    "#         def setSubSelector(indx, outputs):\n",
+    "#             return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
     "\n",
-    "        num_target_samples = self.true_output.shape[0]\n",
+    "#         num_target_samples = self.true_output.shape[0]\n",
     "\n",
-    "        select_seq = T.concatenate([\n",
-    "            self.y_grouping,\n",
-    "            T.arange(self.y_grouping.shape[0]).reshape((self.y_grouping.shape[0], 1))\n",
-    "        ], axis=1)\n",
+    "#         select_seq = T.concatenate([\n",
+    "#             self.y_grouping,\n",
+    "#             T.arange(self.y_grouping.shape[0]).reshape((self.y_grouping.shape[0], 1))\n",
+    "#         ], axis=1)\n",
     "\n",
-    "        self.selecting_matrix, _ = theano.scan(\n",
-    "            setSubSelector,\n",
-    "            outputs_info=T.zeros((num_target_samples, self.y_grouping.shape[0])), #num_target_samples)),\n",
-    "            #n_steps=self.y_grouping.shape[0]\n",
-    "            sequences=select_seq,\n",
-    "        )\n",
+    "#         self.selecting_matrix, _ = theano.scan(\n",
+    "#             setSubSelector,\n",
+    "#             outputs_info=T.zeros((num_target_samples, self.y_grouping.shape[0])), #num_target_samples)),\n",
+    "#             #n_steps=self.y_grouping.shape[0]\n",
+    "#             sequences=select_seq,\n",
+    "#         )\n",
     "\n",
-    "\n",
+    "#########\n",
+    "        \n",
+    "        \n",
     "#         self.groupped_elems = T.dot(self.selecting_matrix[-1].T, \n",
     "#                                    T.exp(self.true_output))\n",
     "#         self.groupped_res = T.log(self.groupped_elems)\n",
@@ -1459,10 +1471,13 @@
     "                        for indx in xrange(len(indicators_place[1])):\n",
     "                            local_feats = np.zeros((self.num_indicator_features,), dtype='int8')\n",
     "                            local_feats[indicators_place[1][indx]] = 1\n",
-    "                            local_feats[targets['query_vals'][indx]] = 1\n",
+    "                            local_feats[targets['query_vals'][indx]] = 1  # features from the joint\n",
+    "                            if isGold:  #################################### hack\n",
+    "                                local_feats[-1] = 1\n",
     "                            joint_indicators.append(local_feats)\n",
-    "                            query_idx.append(len(self.current_queries) + indx)\n",
+    "#                             query_idx.append(len(self.current_queries) + indx)\n",
     "                    else:\n",
+    "                        raise NotImplementedError()\n",
     "                        for indx in xrange(queries_len):\n",
     "                            local_feats = np.zeros((self.num_indicator_features,), dtype='int8')\n",
     "                            local_feats[self.impossible_query] = 1\n",
@@ -1579,9 +1594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1590,20 +1605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "317"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'EntityVectorLinkExp' object has no attribute 'current_denotations_range'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-77-3fa374a9df1d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqueries_exp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_denotations_range\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'EntityVectorLinkExp' object has no attribute 'current_denotations_range'"
+     ]
     }
    ],
    "source": [
@@ -1634,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1645,7 +1661,7 @@
        "(9972, 1)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1665,12 +1681,13 @@
     "loaded_weights = np.loadtxt('/home/matthew/data/external-wiki-weights-wplinks6.txt')\n",
     "\n",
     "queries_exp.query_layer_l.W.get_value(borrow=True)[:] = 0\n",
-    "queries_exp.query_layer_l.W.get_value(borrow=True)[0:loaded_weights.shape[0],0] = loaded_weights"
+    "# queries_exp.query_layer_l.W.get_value(borrow=True)[0:loaded_weights.shape[0],0] = loaded_weights\n",
+    "queries_exp.query_layer_l.W.get_value(borrow=True)[-1] = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1678,12 +1695,63 @@
     {
      "data": {
       "text/plain": [
-       "-2.1156089"
+       "array([[   0.],\n",
+       "       [   0.],\n",
+       "       [   0.],\n",
+       "       ..., \n",
+       "       [   0.],\n",
+       "       [   0.],\n",
+       "       [ 100.]], dtype=float32)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.query_layer_l.W.get_value(borrow=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KB: Prec = 407/485 = 0.839175257732, Rec = 407/485 = 0.839175257732, F1 = 0.839175257732\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run the evaluation on the testing data\n",
+    "queries_exp.num_training_items = 60000\n",
+    "queries_exp.compute_batch(False)\n",
+    "evalCurrentStateFahrni(False, queries_exp.num_training_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'queries_exp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-addd1633bbab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mqueries_exp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery_layer_l\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mborrow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'queries_exp' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1736,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1766,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1803,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1856,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1906,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1917,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1942,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -2588,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -2597,7 +2665,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KB: Prec = 321/485 = 0.661855670103, Rec = 321/485 = 0.661855670103, F1 = 0.661855670103\n"
+      "KB: Prec = 68/485 = 0.140206185567, Rec = 68/485 = 0.140206185567, F1 = 0.140206185567\n"
      ]
     }
    ],
@@ -2610,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -2619,36 +2687,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, (0.094223322674787377, 0.094223322674787377))\n",
-      "(4480, 0.7029017857142857)\n",
-      "(485, 0.6721649484536083)\n",
-      "(1, (0.087092421438036152, 0.087092421438036152))\n",
-      "(4480, 0.7216517857142857)\n",
-      "(485, 0.6804123711340206)\n",
-      "(2, (0.083494613148390559, 0.083494613148390559))\n",
-      "(4480, 0.7308035714285714)\n",
-      "(485, 0.6989690721649484)\n",
-      "(3, (0.081245810845190738, 0.081245810845190738))\n",
-      "(4480, 0.7375)\n",
-      "(485, 0.7072164948453609)\n",
-      "(4, (0.07964740128202398, 0.07964740128202398))\n",
-      "(4480, 0.7415178571428571)\n",
-      "(485, 0.7072164948453609)\n",
-      "(5, (0.078424958287743207, 0.078424958287743207))\n",
-      "(4480, 0.7441964285714285)\n",
-      "(485, 0.711340206185567)\n",
-      "(6, (0.077443495139406071, 0.077443495139406071))\n",
-      "(4480, 0.7455357142857143)\n",
-      "(485, 0.711340206185567)\n",
-      "(7, (0.076626470067597416, 0.076626470067597416))\n",
-      "(4480, 0.7470982142857143)\n",
-      "(485, 0.711340206185567)\n",
-      "(8, (0.075926910241880849, 0.075926910241880849))\n",
-      "(4480, 0.746875)\n",
-      "(485, 0.711340206185567)\n",
-      "(9, (0.075317671659071675, 0.075317671659071675))\n",
-      "(4480, 0.7482142857142857)\n",
-      "(485, 0.711340206185567)\n"
+      "(0, (0.064909983976032468, 0.064909983976032468))\n",
+      "(4480, 0.778125)\n",
+      "(485, 0.7443298969072165)\n",
+      "(1, (0.051959894206541769, 0.051959894206541769))\n",
+      "(4480, 0.8026785714285715)\n",
+      "(485, 0.7690721649484537)\n",
+      "(2, (0.042207644275216082, 0.042207644275216082))\n",
+      "(4480, 0.8314732142857143)\n",
+      "(485, 0.7793814432989691)\n",
+      "(3, (0.034250774567077966, 0.034250774567077966))\n",
+      "(4480, 0.8607142857142858)\n",
+      "(485, 0.797938144329897)\n",
+      "(4, (0.027684077743115952, 0.027684077743115952))\n",
+      "(4480, 0.8738839285714286)\n",
+      "(485, 0.8206185567010309)\n",
+      "(5, (0.022262019929294722, 0.022262019929294722))\n",
+      "(4480, 0.8816964285714286)\n",
+      "(485, 0.8247422680412371)\n",
+      "(6, (0.017777838007713678, 0.017777838007713678))\n",
+      "(4480, 0.8857142857142857)\n",
+      "(485, 0.8329896907216495)\n",
+      "(7, (0.014044895002536351, 0.014044895002536351))\n",
+      "(4480, 0.8886160714285715)\n",
+      "(485, 0.8371134020618557)\n",
+      "(8, (0.010901177021022427, 0.010901177021022427))\n",
+      "(4480, 0.8919642857142858)\n",
+      "(485, 0.8391752577319588)\n",
+      "(9, (0.0082135525170879183, 0.0082135525170879183))\n",
+      "(4480, 0.8933035714285714)\n",
+      "(485, 0.8391752577319588)\n"
      ]
     }
    ],
