--- a/README
+++ b/README
@@ -2,3 +2,11 @@ to get working:
 
 	pip install -r requirements.txt
 	ipython notebook
+
+main parts of the program:
+	exp_multi_conv_cosim.py
+	runner.py
+	evaluation.py
+	helpers.py
+	wikireader.py
+	wordvecs.py
