add note about demo script to readme

--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 to get working:
 
-	pip install -r requirements.txt
-	ipython notebook
+    pip install -r requirements.txt
+    ./demo.sh
 
 main parts of the program:
-	exp_multi_conv_cosim.py
+
+  exp_multi_conv_cosim.py
 	runner.py
 	evaluation.py
 	helpers.py
